test/cherry/Language/struct_list_name_error.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

struct A[2] {
  value: UInt64
}

fn main(): UInt64 {
  0
}

# CHECK: error: expected
